// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/presenters/PanelContainerPresenter renders with all props 1`] = `
<div
  className="hig__flyout-v1__panel-container"
  style={
    Object {
      "maxHeight": "150px",
    }
  }
>
  <div
    className="hig__flyout-v1__panel-container__inner"
  >
    Hello World
  </div>
</div>
`;

exports[`flyout/presenters/PanelContainerPresenter renders with only \`innerRef\` 1`] = `
<div
  className="hig__flyout-v1__panel-container"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="hig__flyout-v1__panel-container__inner"
  />
</div>
`;
